--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "E-Prescription",
-    "name": "E-Prescription",
+    "short_name": "LiveDoc Prescription",
+    "name": "LiveDoc Prescription",
     "icons": [
         {
             "src": "favicon.ico",
