--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "react-dom": "^17.0.2",
         "react-dotenv": "^0.1.3",
         "react-router-dom": "^5.3.0",
-        "react-scripts": "4.0.3",
+        "react-scripts": "^5.0.1",
         "react-to-print": "^2.14.0",
         "web-vitals": "^1.1.2"
     },
