--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_API_V1=https://devec.healthxbd.com/api/v1
-REACT_APP_DOC_SITE=https://livedoc.vercel.app/
+REACT_APP_DOC_SITE=https://livedoc.vercel.app
 REACT_APP_DEMO_ID=2
